# deerportal

./: .clang-format  .clangd  .drone.yml  .ebert.yml  .gitignore  .travis.yml  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AppRun  CARDS.md  CLAUDE.md  CMakeLists.txt  CMakeLists.txt.orig  CMakeSettings.json  CREDITS.md  CmakeLists.txt  DEVELOPMENT.md  DeerPortal.sh  DeerPortal.vcxproj  DeerPortal.vcxproj.filters  Doxyfile  GEMINI.md  HANDBOOK.md  INSTALL.vcxproj  INSTALL.vcxproj.filters  Jenkinsfile  LICENSE  MUSIC.md  Makefile.windows  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  QWEN.md  README.md  RELEASE_NOTES.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  ai-gamelogic.md  ai-instruction.md  ai-instructions.md  ai-todo.md  (+100 more)
.circleci/: config.yml
.claude/commands/: format-code.md  gemini.md  new-version.md  quality.md  update-docs.md
.cursor/rules/: gitignore.mdc  sfml31.mdc
.github/workflows/: cmake.yml  codeql-analysis.yml  release.yml  test-release.yml
ai-docs/: 0.9.2-pre.1-release-plan.md  2025-07-19-gemini-fixes-plan.md  PARTICLE_EFFECTS.md  README.md  ai-docs-restructure-plan.md  ai-formatting.md  ai-gamelogic.md  ai-instruction.md  ai-instructions.md  ai-modularization-plan.md  ai-performance.md  ai-todo.md  ai-upgrade-to-8.2.md  appimage-integration-plan.md  architecture-summary-2025.md  blog.md  card-notification-implementation.md  cicd-artifact-upload-fix-plan.md  code-quality-analysis.md  coding-standards.md  compass_artifact_wf-67dc4e24-4d1f-410c-b622-920270f69127_text_markdown.md  cursor-memory-bank.md  diamond-scaling-optimization.md  error-handling-improvement-plan.md  error-handling-state-transitions.md  errors.md  fadeout-transition-architecture.md  fullscreen-appimage-fix-plan.md  fullscreen-implementation-plan.md  fullscreen-technical-design.md  game-design-decisions-2025.md  github-actions.md  handbook-generation.md  intro-skip-and-cicd-fix-plan.md  linux-asset-path-resolution.md  memory-management-improvement-plan.md  particle-system-optimization-plan.md  performance-optimization-vsync.md  performance-state-machine-optimization.md  plan-reset-state-gemini.md  (+5 more)
ai-docs/abi/: ANIMATED_BOARD_INITIALIZATION.md  CODEBASE-ANALYSIS.md  FINAL-GROK4-plan.md  FINAL-GROK4.md  FINAL-SONNET.md  FINAL-plan.md  GEMINI-FIX.md  GEMINI-PLAN.md  GROK4-fix.md  GROK4-plan.md  O3-plan.md  annotations-grok4.md  diamonds-grok4.md
ai-docs/dev/: ci-troubleshooting.md  macos-memory-debugging.md  windows-compilation-guide.md  windows-cygwin-setup.md  windows-dependencies.md  windows-msys2-setup.md  windows-troubleshooting.md  windows-visual-studio-setup.md
ai-docs/final-docs/: README.md  animation-diamonds-before-game.md  game_states.md  music.md  particles.md  sound.md  sprites.md
ai-docs/lighting/: GEMINI25pro-plan.md  GROK4-plan.md  IMPLEMENTATION-PROGRESS.md  OPUS4-plan.md  SUMMARY-gempro25.md  SUMMARY-sonnet.md
ai-docs/state/: GEMINI.md
assets/audio/: intro.mid  outro.mid
assets/fnt/: SIL Open Font License.txt
assets/img/: Ancient-Sacred-Symbols-2.xcf  Ancient-Sacred-Symbols-22.xcf  Ancient-Sacred-Symbols-3.xcf  Ancient-Sacred-Symbols-33.xcf  dicesWhite.xcf
assets/shaders/: dark.frag  pixelate.frag  ripple.frag  wave.vert
blogs/: 2025-07-13-0.9.1-release.md
debian/: README.Debian  README.source  changelog  control  copyright  deerportal.cron.d.ex  deerportal.default.ex  deerportal.doc-base.EX  deerportal.substvars  files  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
docs/html/: _c_r_e_d_i_t_s_8md.html  _r_e_a_d_m_e_8md.html  animatedsprite_8cpp.html  animatedsprite_8h.html  animatedsprite_8h_source.html  animation_8cpp.html  animation_8h.html  animation_8h_source.html  annotated.html  boarddiamond_8cpp.html  boarddiamond_8h.html  boarddiamond_8h_source.html  boarddiamondseq_8cpp.html  boarddiamondseq_8h.html  boarddiamondseq_8h_source.html  boardelem_8cpp.html  boardelem_8h.html  boardelem_8h_source.html  boardelems_8cpp.html  boardelems_8h.html  boardelems_8h_source.html  card_8cpp.html  card_8h.html  card_8h_source.html  cardsdeck_8cpp.html  cardsdeck_8h.html  cardsdeck_8h_source.html  cardslist_8cpp.html  cardslist_8h.html  cardslist_8h_source.html  character_8cpp.html  character_8h.html  character_8h_source.html  class_animated_sprite-members.html  class_animated_sprite.html  class_animation-members.html  class_animation.html  class_board_diamond-members.html  class_board_diamond.html  class_board_diamond_seq-members.html  (+144 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  (+39 more)
packaging/: DeerPortal.icns  Info.plist  README.md  dmg_setup.scpt
scripts/: build_deerportal_deb_package.sh  build_windows_mxe.sh  create_dmg.sh  fix_dmg.sh  jenkins-testing.sh  testMode.sh  travis_before_install_linux.sh  travis_before_install_osx.sh  travis_make.sh
src/: animated-board-item.cpp  animated-board-item.h  animatedsprite.cpp  animatedsprite.h  animation.cpp  animation.h  banner.cpp  banner.h  board-initialization-animator.cpp  board-initialization-animator.h  board-spawn-regions.cpp  board-spawn-regions.h  boarddiamond.cpp  boarddiamond.h  boarddiamondseq.cpp  boarddiamondseq.h  boardelem.cpp  boardelem.h  boardelems.cpp  boardelems.h  bubble.cpp  bubble.h  calendar.cpp  calendar.h  card-notification-renderer.h  card-notification-text.h  card.cpp  card.h  cardnotification.cpp  cardnotification.h  cardsdeck.cpp  cardsdeck.h  cardslist.cpp  cardslist.h  character.cpp  character.h  command.cpp  command.h  credits.cpp  credits.h  (+62 more)
